--- a/transport-service/src/main/resources/application.yml
+++ b/transport-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: driver-service
+    name: transport-service
   #Enabling H2 console
   h2:
     console:
@@ -13,8 +13,16 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: none    
     
 server:
-  port: 8085
-  
+  port: 8082
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
