--- a/driver-service/src/main/resources/application.yml
+++ b/driver-service/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     
 server:
   port: 8085
