--- a/driver-service/src/main/resources/application.yml
+++ b/driver-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:driverdb
     driver-class-name: org.h2.Driver
     username: sa
     password: 
@@ -17,4 +17,13 @@ spring:
     
 server:
   port: 8085
+  
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
   
