Added Eureka discovery service configurations and custom id-generators using hibernate sequence

--- a/transport-service/src/main/resources/application.yml
+++ b/transport-service/src/main/resources/application.yml
@@ -6,14 +6,14 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:transportdb
     driver-class-name: org.h2.Driver
     username: sa
     password: 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: none    
+      ddl-auto: update    
     
 server:
   port: 8082
