--- a/TransportManagement/package.json
+++ b/TransportManagement/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "bootstrap": "^4.1.3",
+    "bootstrap4-toggle": "^3.4.0",
     "core-js": "^2.5.4",
     "npm": "^6.3.0",
     "rxjs": "^6.0.0",
